--- a/前端常见命令.md
+++ b/前端常见命令.md
@@ -1,4 +1,4 @@
-##### npm
+	##### npm
 
 * npm基本命令
 查看npm版本号 npm -v
@@ -46,7 +46,7 @@ npm config get prefix
 全局配置文件： $PREFIX/etc/npmrc
 
 which npm 
-npm 内置配置文件 /path/to/npm/npmrc
+npm 内置配置文件 E:\nodejs\node_modules\npm\.npmrc
 ```
 
 
